# IDATT2104-Nettverksprogrammering

./: .gitignore
Øving 1/: CMakeLists.txt  PrimeNumberFinderWithThreads  PrimeNumberFinderWithThreads.cpp  README.md
Øving 1/PrimeNumberFinderWithThreads.dSYM/Contents/: Info.plist
Øving 1/PrimeNumberFinderWithThreads.dSYM/Contents/Resources/DWARF/: PrimeNumberFinderWithThreads
Øving 1/PrimeNumberFinderWithThreads.dSYM/Contents/Resources/Relocations/aarch64/: PrimeNumberFinderWithThreads.yml
Øving 2/apps/: CMakeLists.txt  main.cpp
Øving 2/include/: Workers.hpp
Øving 2/src/: Workers.cpp
Øving 3/: Server.cpp  client
Øving 3/Oppgave 1/: CMakeLists.txt  Client  Client.cpp  Server.cpp
Øving 3/Oppgave 2/: SimpleWebServer.cpp
Øving 3/web/: CMakeLists.txt  SimpleWebServer.cpp
Øving 4/Oppgave 1/: AsyncSocketClient  AsyncSocketClient.cpp  AsyncSocketServerCompletionHandler.cpp  CMakeLists.txt  Client  Client.cpp  Server.cpp
Øving 4/Oppgave 2/: JavaSSLClient.java  README.txt  clienttruststore.jks  server.crt  serverkeystore.jks
Øving 5/client/: README.md  package-lock.json  package.json
Øving 5/client/src/: App.vue
Øving 5/client/src/assets/: main.css
Øving 5/client/src/components/: CodeEditor.vue  CodeInput.vue  ResultDisplay.vue
Øving 5/client/src/router/: index.ts
Øving 5/client/src/views/: CodeEditorView.vue
Øving 5/compiler 2/: pom.xml
Øving 5/compiler 2/src/main/java/com/kludge/compiler/: CompilerController.java  (+2 more)
Øving 5/compiler 2/src/main/resources/static/: index.html
Øving 5/compiler 3/: pom.xml
Øving 5/server/: Dockerfile  pom.xml
(+6 files in other folders)
